results/scraper/box64/2750
Build error when both -DBOX32=ON -DBOX32_BINFMT=ON and -DSTATICBUILD=ON are enabled
Hi, My system is ubuntu 24.04 x86_64

Build command: `cmake .. -D ARM_DYNAREC=ON -DCMAKE_C_COMPILER=aarch64-linux-gnu-gcc -D STATICBUILD=ON -D BOX32=ON -D BOX32_BINFMT=ON`

```
[ 76%] Building C object CMakeFiles/mainobj.dir/src/wrapped32/wrappedldlinux.c.o
In file included from /root/box64/src/wrapped32/wrappedldlinux.c:58:
/root/box64/src/wrapped32/wrappedldlinux_private.h:16:6: error: ‘__libc_enable_secure’ undeclared here (not in a function)
   16 | DATA(__libc_enable_secure, 4)
      |      ^~~~~~~~~~~~~~~~~~~~
/root/box64/src/wrapped32/wrappedlib_init32.h:117:39: note: in definition of macro ‘DATA’
  117 | #define DATA(N, S) {#N, S, 0, (void*)&N},
      |                                       ^
/root/box64/src/wrapped32/wrappedldlinux_private.h:17:6: error: ‘__libc_stack_end’ undeclared here (not in a function); did you mean ‘my32___libc_stack_end’?
   17 | DATA(__libc_stack_end, 4)
      |      ^~~~~~~~~~~~~~~~
/root/box64/src/wrapped32/wrappedlib_init32.h:117:39: note: in definition of macro ‘DATA’
  117 | #define DATA(N, S) {#N, S, 0, (void*)&N},
      |                                       ^
/root/box64/src/wrapped32/wrappedldlinux_private.h:18:6: error: ‘__pointer_chk_guard’ undeclared here (not in a function)
   18 | DATA(__pointer_chk_guard, 4)
      |      ^~~~~~~~~~~~~~~~~~~
/root/box64/src/wrapped32/wrappedlib_init32.h:117:39: note: in definition of macro ‘DATA’
  117 | #define DATA(N, S) {#N, S, 0, (void*)&N},
      |                                       ^
/root/box64/src/wrapped32/wrappedldlinux_private.h:20:6: error: ‘_rtld_global’ undeclared here (not in a function)
   20 | DATA(_rtld_global, 4)
      |      ^~~~~~~~~~~~
/root/box64/src/wrapped32/wrappedlib_init32.h:117:39: note: in definition of macro ‘DATA’
  117 | #define DATA(N, S) {#N, S, 0, (void*)&N},
      |                                       ^
/root/box64/src/wrapped32/wrappedldlinux_private.h:21:6: error: ‘_rtld_global_ro’ undeclared here (not in a function)
   21 | DATA(_rtld_global_ro, 4)
      |      ^~~~~~~~~~~~~~~
/root/box64/src/wrapped32/wrappedlib_init32.h:117:39: note: in definition of macro ‘DATA’
  117 | #define DATA(N, S) {#N, S, 0, (void*)&N},
      |                                       ^
/root/box64/src/wrapped32/wrappedldlinux_private.h:22:6: error: ‘__stack_chk_guard’ undeclared here (not in a function)
   22 | DATA(__stack_chk_guard, 4)
      |      ^~~~~~~~~~~~~~~~~
/root/box64/src/wrapped32/wrappedlib_init32.h:117:39: note: in definition of macro ‘DATA’
  117 | #define DATA(N, S) {#N, S, 0, (void*)&N},
      |                                       ^
make[2]: *** [CMakeFiles/mainobj.dir/build.make:1290：CMakeFiles/mainobj.dir/src/wrapped32/wrappedldlinux.c.o] 错误 1
make[1]: *** [CMakeFiles/Makefile2:427：CMakeFiles/mainobj.dir/all] 错误 2
make: *** [Makefile:121：all] 错误 2
```